--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,8 @@ body {
 /* ---------------%اجعل الشريط الجانبي بطول 100------------- */
 .side-bar {
   /* flex */
+  display: flex;
+  height: 100%;
 }
 
 /* ------------------(العنوان: المطلوب #2)------------------ */
@@ -26,6 +28,9 @@ body {
 /* --اجعل العناصر (المنيو، معرفة المزيد، تواصل) تظهر بالنص-- */
 .head-ul {
   /* flex */
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 
@@ -43,6 +48,9 @@ body {
   margin-top: 50px;
   border-radius: 20px;
   /* flex */
+  display: flex;
+  justify-content: center ;
+  flex-direction: column;
 }
 .header {
   width: 100%;
